# yt_downloader

./: .gitignore  README.md  nx.json  package-lock.json  package.json
apps/backend/: package-lock.json  package.json  project.json
apps/backend/src/: index.js  server.js
apps/backend/src/routes/: downloads.js
apps/backend/src/services/: job-store.js
apps/desktop/: index.html  package-lock.json  package.json  project.json  vite.config.js
apps/desktop/scripts/: tauri-build.cmd  tauri-dev.cmd
apps/desktop/src/: App.jsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/frontend/: index.html  package-lock.json  package.json  project.json
apps/frontend/src/: App.jsx  styles.css
