[package]
name = "ytdownloader_desktop"
version = "0.1.0"
description = "Desktop app Tauri para processamento local de video e audio"
authors = ["studioBox101"]
edition = "2021"

[lib]
name = "ytdownloader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
